@@ -146,8 +146,12 @@ setMethodS3("getType", "RspString", function(object, default=NA, as=c("text", "I
 #   @seeclass
 # }
 #*/#########################################################################
-setMethodS3("getMetadata", "RspString", function(object, name=NULL, ...) {
+setMethodS3("getMetadata", "RspString", function(object, name=NULL, local=TRUE, ...) {
   res <- getAttribute(object, "metadata", default=list());
+  if (!local) {
+    isLocal <- is.element(names(res), "source");
+    res <- res[!isLocal];
+  }
   if (!is.null(name)) {
     res <- res[[name]];
   }
