@@ -3,7 +3,7 @@
 # @alias rscript.RspString
 # @alias rscript.RspDocument
 #
-# @title "Compiles an RSP string and returns the generated source code script"
+# @title "Compiles an RSP document and returns the generated source code script"
 #
 # \description{
 #  @get "title".
@@ -16,6 +16,16 @@
 #   \item{file, path}{Alternatively, a file, a URL or a @connection from
 #      with the strings are read.
 #      If a file, the \code{path} is prepended to the file, iff given.}
+#   \item{output}{A @character string or a @connection specifying where
+#      output should be directed.
+#      The default is a file with a filename where the file extension(s)
+#      (typically \code{".*.rsp"}) has been replaced by \code{".R"}
+#      in the directory given by the \code{workdir} argument.}
+#   \item{workdir}{The working directory to use after parsing and
+#      preprocessing.
+#      If argument \code{output} specifies an absolute pathname,
+#      then the directory of \code{output} is used, otherwise the
+#      current directory is used.}
 #   \item{envir}{The @environment in which the RSP string is
 #      preprocessed and evaluated.}
 #   \item{args}{A named @list of arguments assigned to the environment
@@ -25,7 +35,8 @@
 # }
 #
 # \value{
-#   Returns an @see "RspSourceCode".
+#   Returns an @see "RspFileProduct" if possible,
+#   otherwise an @see "RspSourceCode".
 # }
 #
 # @examples "../incl/rscript.Rex"
@@ -40,7 +51,7 @@
 # @keyword IO
 # @keyword internal
 #*/###########################################################################
-setMethodS3("rscript", "default", function(..., file=NULL, path=NULL, envir=parent.frame(), args="*", verbose=FALSE) {
+setMethodS3("rscript", "default", function(..., file=NULL, path=NULL, output=NULL, workdir=NULL, envir=parent.frame(), args="*", verbose=FALSE) {
   # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Validate arguments
   # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -53,6 +64,63 @@ setMethodS3("rscript", "default", function(..., file=NULL, path=NULL, envir=pare
     if (!isUrl(file)) {
       file <- Arguments$getReadablePathname(file, absolute=TRUE);
     }
+  }
+
+  # Argument 'workdir':
+  if (is.null(workdir)) {
+    if (isAbsolutePath(output)) {
+      workdir <- getParent(output);
+    } else {
+      workdir <- ".";
+    }
+  }
+  workdir <- Arguments$getWritablePath(workdir);
+  if (is.null(workdir)) workdir <- ".";
+
+  # Argument 'output':
+  if (is.null(output)) {
+    if (inherits(file, "connection")) {
+      throw("When argument 'file' is a connection, then 'output' must be specified.");
+    }
+
+    # Is the input a filename or an URI?
+    if (isUrl(file)) {
+      # If URI, drop any URI arguments
+      url <- splitUrl(file);
+      filename <- basename(url$path);
+      filename <- Arguments$getReadablePathname(filename, adjust="url", mustExist=FALSE);
+    } else {
+      filename <- basename(file);
+    }
+
+    pattern <- "((.*)[.]([^.]+)|([^.]+))[.]([^.]+)$";
+    outputF <- gsub(pattern, "\\1.R", filename, ignore.case=TRUE);
+    withoutGString({
+      output <- Arguments$getWritablePathname(outputF, path=workdir);
+    })
+    output <- getAbsolutePath(output);
+    # Don't overwrite the input file
+    if (output == file) {
+      throw("Cannot process RSP file. The inferred argument 'output' is the same as argument 'file' & 'path': ", output, " == ", file);
+    }
+  } else if (inherits(output, "connection")) {
+  } else if (identical(output, "")) {
+    output <- stdout();
+  } else if (inherits(output, "RspSourceCode")) {
+  } else if (is.character(output)) {
+    withoutGString({
+      if (isAbsolutePath(output)) {
+        output <- Arguments$getWritablePathname(output);
+      } else {
+        output <- Arguments$getWritablePathname(output, path=workdir);
+        output <- getAbsolutePath(output);
+      }
+    })
+    if (is.character(file) && (output == file)) {
+      throw("Cannot process RSP file. Argument 'output' specifies the same file as argument 'file' & 'path': ", output, " == ", file);
+    }
+  } else {
+    throw("Argument 'output' of unknown type: ", class(output)[1L]);
   }
 
   # Argument 'verbose':
@@ -71,10 +139,11 @@ setMethodS3("rscript", "default", function(..., file=NULL, path=NULL, envir=pare
     verbose && cat(verbose, "Input file: ", file);
     s <- .readText(file);
     s <- RspString(s, source=file, ...);
+    s <- setMetadata(s, name="source", value=file);
   }
   verbose && cat(verbose, "Length of RSP string: ", nchar(s));
 
-  res <- rscript(s, envir=envir, args=args, verbose=verbose);
+  res <- rscript(s, output=output, workdir=workdir, envir=envir, args=args, verbose=verbose);
 
   verbose && exit(verbose);
 
@@ -82,7 +151,7 @@ setMethodS3("rscript", "default", function(..., file=NULL, path=NULL, envir=pare
 }) # rscript()
 
 
-setMethodS3("rscript", "RspString", function(object, envir=parent.frame(), args="*", ..., verbose=FALSE) {
+setMethodS3("rscript", "RspString", function(object, output=NULL, workdir=NULL, envir=parent.frame(), args="*", ..., verbose=FALSE) {
   # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Validate arguments
   # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -132,7 +201,7 @@ setMethodS3("rscript", "RspString", function(object, envir=parent.frame(), args=
   verbose && print(verbose, expr);
   verbose && exit(verbose);
 
-  res <- rscript(expr, envir=envir, args=NULL, ..., verbose=verbose);
+  res <- rscript(expr, output=output, workdir=workdir, envir=envir, args=NULL, ..., verbose=verbose);
 
   verbose && exit(verbose);
 
@@ -140,10 +209,31 @@ setMethodS3("rscript", "RspString", function(object, envir=parent.frame(), args=
 }) # rscript()
 
 
-setMethodS3("rscript", "RspDocument", function(object, envir=parent.frame(), ..., verbose=FALSE) {
+setMethodS3("rscript", "RspDocument", function(object, output=NULL, workdir=NULL, envir=parent.frame(), ..., verbose=FALSE) {
   # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Validate arguments
   # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Argument 'workdir':
+  if (is.null(workdir)) {
+    workdir <- ".";
+    if (inherits(output, "RspSourceCode")) {
+    } else if (isAbsolutePath(output)) {
+      workdir <- getParent(output);
+    }
+  }
+
+  # Argument 'output':
+  if (!is.null(output)) {
+    if (inherits(output, "connection")) {
+    } else if (inherits(output, "RspSourceCode")) {
+    } else {
+      withoutGString({
+        output <- Arguments$getWritablePathname(output, path=workdir);
+      })
+      output <- getAbsolutePath(output);
+    }
+  }
+
   # Argument 'verbose':
   verbose <- Arguments$getVerbose(verbose);
   if (verbose) {
@@ -153,6 +243,9 @@ setMethodS3("rscript", "RspDocument", function(object, envir=parent.frame(), ...
 
   verbose && enter(verbose, "rscript() for ", class(object)[1L]);
 
+  # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Coerce
+  # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   verbose && enter(verbose, "Coerce RSP document to source code");
   language <- getAttribute(object, "language", default="R");
   language <- capitalize(tolower(language));
@@ -164,23 +257,40 @@ setMethodS3("rscript", "RspDocument", function(object, envir=parent.frame(), ...
   code <- toSourceCode(factory, object, ..., verbose=verbose);
 
   if (verbose) {
-    cat(verbose, "Generated source code:");
-    cat(verbose, head(code, n=3L));
-    cat(verbose);
-    cat(verbose, "[...]");
-    cat(verbose);
-    cat(verbose, tail(code, n=3L));
+    enter(verbose, "Generated source code:");
+    codeS <- c(head(code, n=10L), "", "[...]", "", tail(code, n=10L));
+    cat(verbose, codeS);
     exit(verbose);
+  }
+
+
+  # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Return as RspSourceCode, write to file, or ...?
+  # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  if (inherits(output, "RspSourceCode")) {
+    # Return as RspSourceCode
+    output <- code;
+  } else if (!is.null(output)) {
+    # Write to file
+    verbose && enter(verbose, "Writing to output");
+    writeLines(code, con=output);
+    verbose && exit(verbose);
+
+    output <- RspFileProduct(output, type=getType(code), metadata=getMetadata(code), mustExist=FALSE);
   }
 
   verbose && exit(verbose);
 
-  code;
+  output;
 }) # rscript()
 
 
 ##############################################################################
 # HISTORY:
+# 2014-05-27
+# o Now rscript(file) writes to file by default.
+# o Now rscript() adds metadata attributes.
+# o Added arguments 'output' and 'workdir' to rscript().
 # 2014-01-26
 # o CLEANUP: Now R.oo::ll() is only called if 'verbose' is enabled, because
 #   calling ll() still triggers attachment of R.oo as of R.oo (>= 1.17.0).
