@@ -76,6 +76,7 @@ setMethodS3("rstring", "default", function(..., file=NULL, path=NULL, envir=pare
     verbose && cat(verbose, "Input file: ", file);
     s <- .readText(file);
     s <- RspString(s, source=file, ...);
+    s <- setMetadata(s, name="source", value=file);
   }
   verbose && cat(verbose, "Length of RSP string: ", nchar(s));
 
